--- a/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/style.css
+++ b/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/style.css
@@ -52,3 +52,9 @@ p {
 }
 
 /* Add your custom styles for btn-1, btn-2, and btn-3 */
+.btn-1 {
+    background: linear-gradient(180deg, #353535, #afd787);
+    border: none;
+    color: #000;
+    box-shadow: inset 0px 2px 2px 0px #1408ec;
+}
