--- a/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/style.css
+++ b/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/style.css
@@ -58,3 +58,9 @@ p {
     color: #000;
     box-shadow: inset 0px 2px 2px 0px #1408ec;
 }
+.btn-2{
+    background-color: #5fd9d9;
+    border: transparent;
+    color: #eeefed;
+    
+}
