added style to button-3

--- a/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/style.css
+++ b/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/style.css
@@ -62,5 +62,9 @@ p {
     background-color: #5fd9d9;
     border: transparent;
     color: #eeefed;
-    
+
+}
+.btn-3{
+   background-color: bisque; 
+   border: 3px solid gold;
 }
