--- a/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/style.css
+++ b/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/style.css
@@ -53,10 +53,16 @@ p {
 
 /* Add your custom styles for btn-1, btn-2, and btn-3 */
 .btn-1 {
-    background: linear-gradient(180deg, #353535, #afd787);
+    background: linear-gradient(180deg, #b2b2e2, #e6efdd);
     border: none;
     color: #000;
     box-shadow: inset 0px 2px 2px 0px #1408ec;
+    transition: ease-out 0.5s;
+}
+.btn-1:hover {
+    box-shadow: inset 130px 2px 2px 0px #1408ec;
+    color: #eeefed;
+    font-size: 1rem;
 }
 .btn-2{
     background-color: #5fd9d9;
