added hover effect on btn-2

--- a/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/style.css
+++ b/Module_5R_StudentNo_Classcode_Group_Name-Surname_SDF05R-main/style.css
@@ -52,6 +52,9 @@ p {
 }
 
 /* Add your custom styles for btn-1, btn-2, and btn-3 */
+
+/*------Button-1----*/
+
 .btn-1 {
     background: linear-gradient(180deg, #b2b2e2, #e6efdd);
     border: none;
@@ -64,12 +67,25 @@ p {
     color: #eeefed;
     font-size: 1rem;
 }
+ 
+ /*-----Button-2-------*/
+
 .btn-2{
     background-color: #5fd9d9;
     border: transparent;
     color: #eeefed;
+    transition: ease 0.5s;
 
 }
+.btn-2:hover {
+ background-color: transparent;
+ border: 3px solid #5fd9d9;
+ color: #5fd9d9;
+ font-weight: 700;
+ font-family: 'Times New Roman', Times, serif;
+}
+
+
 .btn-3{
    background-color: bisque; 
    border: 3px solid gold;
